--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
-.App {
+body {
+  font-family: 'Rubik', sans-serif;
+  font-size: 14px;
+}
+
+.header {
+  background-image: url('https://i.imgur.com/IC1xXJY.jpg');
+  background-attachment: fixed;
+  background-size: cover;
+  font-weight: 600;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  letter-spacing: -3.5px;
+  height: 94vh;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: 3.3em;
   color: white;
+  overflow: hidden;
 }
 
-.App-link {
-  color: #61dafb;
-}
+/* .header:after {
+  content: '';
+  position: absolute;
+  top: 88%;
+  left: 0;
+  height: 50%;
+  width: 150%;
+  background: rgb(255, 255, 255);
+  -webkit-transform: rotate(-1deg);
+  -moz-transform: rotate(-1deg);
+  transform: rotate(-1deg);
+} */
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.main {
+  width: 100%;
+  height: 1000px;
+  background-image: linear-gradient(
+    176deg,
+    #fff 70%,
+    rgb(27 45 41) calc(70% + 2px)
+  );
 }
