--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,27 @@
 body {
   font-family: 'Rubik', sans-serif;
-  font-size: 14px;
+  font-size: 16px;
 }
 
 .header {
   background-image: url('https://i.imgur.com/IC1xXJY.jpg');
   background-attachment: fixed;
   background-size: cover;
-  font-weight: 600;
   text-align: center;
-  letter-spacing: -3.5px;
   height: 94vh;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: 3.3em;
   color: white;
   overflow: hidden;
+}
+
+.header h1 {
+  font-size: 4.9em;
+  font-weight: 600;
+  letter-spacing: -3.5px;
 }
 
 /* .header:after {
