--- a/src/App.css
+++ b/src/App.css
@@ -37,12 +37,22 @@ body {
   transform: rotate(-1deg);
 } */
 
+.middle-nav {
+  border-top: 13px solid rgb(188, 225, 255);
+  top: 0;
+  position: sticky;
+}
+
 .main {
+  min-height: 500px;
+}
+
+footer {
   width: 100%;
-  height: 1000px;
+  min-height: 400px;
   background-image: linear-gradient(
     176deg,
-    #fff 70%,
-    rgb(27 45 41) calc(70% + 2px)
+    rgb(255, 255, 255) 40%,
+    rgb(27, 43, 39) calc(40% + 2px)
   );
 }
