--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,13 @@
 body {
   font-family: 'Rubik', sans-serif;
   font-size: 16px;
+  background: white;
+}
+
+body a {
+  color: rgb(203, 232, 255);
+  font-weight: bold;
+  text-decoration: none;
 }
 
 .header {
@@ -20,8 +27,8 @@ body {
 
 .header h1 {
   font-size: 4.9em;
-  font-weight: 600;
-  letter-spacing: -2.2px;
+  font-weight: 700;
+  letter-spacing: -1.8px;
 }
 
 /* .header:after {
@@ -43,16 +50,29 @@ body {
   position: sticky;
 }
 
-.main {
-  min-height: 500px;
+.content {
+  font-size: 1.2em;
+  line-height: 1.5em;
+  /* min-height: 500px; */
+  padding: 3em 10vw;
 }
 
 footer {
+  color: white;
   width: 100%;
   min-height: 400px;
   background-image: linear-gradient(
     176deg,
     rgb(255, 255, 255) 40%,
-    rgb(38, 56, 49) calc(40% + 2px)
+    rgb(36, 51, 46) calc(40% + 2px)
   );
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: end;
+}
+
+footer > div {
+  padding: 1em 5vw;
+  text-align: right;
 }
