--- a/src/App.css
+++ b/src/App.css
@@ -10,12 +10,21 @@ body a {
   text-decoration: none;
 }
 
-.header {
+body a:hover {
+  color: white;
+}
+
+/* .container {
+  border-left: 15px solid rgb(203, 232, 255);
+  border-right: 15px solid rgb(203, 232, 255);
+} */
+
+header {
   background-image: url('https://i.imgur.com/IC1xXJY.jpg');
   background-attachment: fixed;
   background-size: cover;
   text-align: center;
-  height: 93vh;
+  height: 95vh;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -25,8 +34,12 @@ body a {
   overflow: hidden;
 }
 
-.header h1 {
-  font-size: 4.9em;
+header div {
+  padding: 2em 7vw;
+}
+
+header h1 {
+  font-size: 5em;
   font-weight: 700;
   letter-spacing: -1.8px;
 }
@@ -45,34 +58,36 @@ body a {
 } */
 
 .middle-nav {
-  border-top: 15px solid rgb(203, 232, 255);
-  top: 0;
+  background-color: #dceefd;
+  min-height: 120px;
+  top: -100px;
   position: sticky;
 }
 
 .content {
   font-size: 1.2em;
   line-height: 1.5em;
-  /* min-height: 500px; */
-  padding: 3em 10vw;
+  padding: 3.5em 10vw;
+  padding-bottom: 0;
 }
 
 footer {
   color: white;
   width: 100%;
-  min-height: 400px;
+  min-height: 300px;
   background-image: linear-gradient(
     176deg,
-    rgb(255, 255, 255) 40%,
-    rgb(36, 51, 46) calc(40% + 2px)
+    rgba(255, 255, 255, 0) 40%,
+    rgb(51, 68, 62) calc(40% + 2px)
   );
   display: flex;
   flex-direction: column;
   align-items: flex-end;
   justify-content: end;
+  z-index: 999;
 }
 
 footer > div {
-  padding: 1em 5vw;
+  padding: 0.5em 10vw;
   text-align: right;
 }
