--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -10,8 +10,8 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  justify-content: end;
-  z-index: 999;
+  justify-content: flex-end;
+  z-index: 22;
 }
 
 footer > div {
