--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -2,6 +2,7 @@ header {
   background-image: url('https://i.imgur.com/IC1xXJY.jpg');
   background-attachment: fixed;
   background-size: cover;
+  -webkit-background-size: cover;
   text-align: center;
   height: 95vh;
   width: 100%;
