--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -2,7 +2,6 @@ header {
   background-image: url('https://i.imgur.com/IC1xXJY.jpg');
   background-attachment: fixed;
   background-size: cover;
-  -webkit-background-size: cover;
   text-align: center;
   height: 95vh;
   width: 100%;
@@ -16,7 +15,7 @@ header {
 
 header div {
   padding: 2em 7vw;
-  position: fixed;
+  position: absolute;
   z-index: 0;
 }
 
