Start adding text

--- a/src/components/content.css
+++ b/src/components/content.css
@@ -1,8 +1,27 @@
 .content {
   font-size: 1.2em;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   line-height: 1.5em;
   padding: 3.5em 10vw;
   padding-bottom: 0;
   z-index: 4;
   position: relative;
+  color: rgb(37, 37, 37);
+}
+
+.bill-title {
+  text-align: center;
+}
+
+#intro {
+  font-size: 0.76em;
+  margin-bottom: 4em;
+}
+
+.content li {
+  margin: 0.7em 0;
+}
+
+.content h1 {
+  margin-bottom: 1.5em;
 }
