--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,5 +1,5 @@
 header {
-  background-image: url('https://i.imgur.com/IC1xXJY.jpg');
+  background-image: url('https://i.imgur.com/wmKQgFS.jpg');
   background-attachment: fixed;
   background-size: cover;
   text-align: center;
