--- a/src/components/content.css
+++ b/src/components/content.css
@@ -1,6 +1,6 @@
 .content {
   font-size: 1.2em;
-  /* font-family: Arial, Helvetica, sans-serif; */
+  font-family: Georgia, Times, 'Times New Roman', serif;
   line-height: 1.6;
   padding: 3.5em 10vw;
   padding-bottom: 0;
